--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -38,12 +38,7 @@ jobs:
           git add package.json bun.lock
           git commit -m "chore(deps): update dependencies" || true
           git push -f origin update-dependencies
-          curl -sL -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls?head=update-dependencies"
-          # PR_URL=$(curl -fsSL -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls?head=update-dependencies" | bunx json -a html_url | head -n 1 || echo "null")
-          # if [ "$PR_URL" != "null" ]; then
-          #   curl -sL -X PATCH -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "$PR_URL" \
-          #     -d "{\"title\":\"chore(deps): update dependencies\",\"body\":\"Updated dependencies\",\"state\":\"open\"}"
-          # else
-          #   curl -sL -X POST -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls" \
-          #     -d "{\"title\":\"chore(deps): update dependencies\",\"body\":\"$UPDATED_DEPENDENCIES\",\"head\":\"update-dependencies\",\"base\":\"main\"}"
-          # fi
+          IS_EXISTING=$(curl -sL -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls?head=update-dependencies")
+          if [[ $IS_EXISTING == "[]" ]]; then
+            curl -sL -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" -X POST -d '{"title":"chore(deps): update dependencies","head":"update-dependencies","base":"main"}' "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls"
+          fi
