--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -38,7 +38,7 @@ jobs:
           git add package.json bun.lock
           git commit -m "chore(deps): update dependencies" || true
           git push -f origin update-dependencies
-          IS_EXISTING=$(curl -sL -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls?head=update-dependencies")
-          if [[ $IS_EXISTING == "[]" ]]; then
+          IS_EXISTING=$(curl -sL -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls?head=update-dependencies" | npx json -a head.ref | grep "update-dependencies" | xargs)
+          if [[ -z $IS_EXISTING ]]; then
             curl -sL -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" -X POST -d '{"title":"chore(deps): update dependencies","head":"update-dependencies","base":"main"}' "https://api.github.com/repos/$GITHUB_REPOSITORY/pulls"
           fi
